app/assets/stylesheets/03_pickup_map.scss
#map-container {
  position: fixed;
  min-width: 300px;
  top: 98px;
  left: 830px;
  right: 0px;
  bottom: 0px;
  width: 100%;
  height: 91vh;
  background-color: black;
}

#pickup-container {
  height: 100%;
}

.infowindow-photo {
  width: 200px;
  height: 120px;
}

.infowindow-title {
  font-size: 16px;
}

.infowindow-rating, .infowindow-price {
  font-size: 12px;
  padding-left: 5px;
  padding-right: 5px
}

.infowindow-reviewcount {
  font-size: 12px;
}

#pickup-restaurants {
  background-color: white;
  position: fixed;
  margin-top: 96px;
  max-width: 830px;
  width: 100%;
  top: 0;
  bottom: 0;
  height: auto;
  overflow-y: scroll;
  z-index: 1;
}

#pickup-title {
  padding-left: 30px;
  font-size: 30px;
  margin-top: 30px;
  margin-bottom: 30px;
}

#pickup-restaurant-list {
  margin-left: 30px;
  width: 750px;
  display: grid;
  gap: 20px;
  grid-template-columns: repeat(2, 1fr);
  margin-bottom: 20px;
}

.restaurant-container {
  width: 100%;
  height: auto;
  padding-left: 10px;
  padding-right: 10px;
  padding-top: 10px;
  padding-bottom: 5px;
}

.restaurant-container:hover {
  background-color: #eeeeee;
}

.restaurant-bottom {
  display: grid;
  height: 30%;
  grid-template-columns: repeat(4 auto);
  grid-template-rows: repeat(2 auto);
  grid-column-gap: 10px;
}

.restaurant-hours, .restaurant-name, .restaurant-price,
.restaurant-rating, .restaurant-reviewcount {
  justify-self: center;
  align-self: center;
}

.restaurant-image {
  object-fit: cover;
  min-width: 220px;
  height: 200px;
  width: 100%;
  background-color: lightblue;
}

.restaurant-name {
  margin-top: 5px;
  font-size: 100%;
  display: block;
  width: 100%;
  grid-area: 1 / 1 / 2 / 6;
}

.restaurant-hours, .restaurant-price, .restaurant-reviewcount {
  font-family: "Uber Light";
}

.restaurant-hours {
  justify-self: stretch;
  font-size: 14px;
  grid-area: 2 / 1 / 3 / 2;
}

.restaurant-price {
  font-size: 14px;
  grid-area: 2 / 2 / 3 / 3;
}

.restaurant-reviewcount {
  font-size: 14px;
  grid-area: 2 / 4 / 3 / 5;
}

.restaurant-rating {
  position: relative;
  bottom: 20px;
  font-size: 14px;
  background-color: #eeeeee;
  width: 20px;
  padding-left: 10px;
  padding-right: 10px;
  padding-top: 10px;
  padding-bottom: 10px;
  border-radius: 20px;
  grid-area: 2 / 5 / 3 / 6;
}

